--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "SAIA Perfect Fit Widget",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
+    "build": "NODE_ENV=development webpack --progress",
+    "build:prod": "NODE_ENV=production webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +23,7 @@
     "autoprefixer": "^9.4.6",
     "babel-loader": "^8.0.5",
     "breakpoint-sass": "^2.7.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
     "eslint": "^5.12.1",
