--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "saia-sdk": "git+https://git@bitbucket.org/Hachapury/saia-sdk.git"
   }
 }
