--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://bitbucket.org/Skiminojek/saia-pf-widget#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^9.4.6",
     "babel-loader": "^8.0.5",
@@ -44,6 +45,8 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "preact": "^8.4.2",
+    "preact-compat": "^3.18.4",
     "saia-sdk": "git+https://git@bitbucket.org/Hachapury/saia-sdk.git"
   }
 }
