--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ end_of_line = lf
 insert_final_newline = true
 
 # use 2 spaces in js, css and scss files
-[*.{js,css,scss}]
+[*.{jsx,js,css,scss}]
 charset = utf-8
 indent_style = space
 indent_size = 2
