--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "image-webpack-loader": "^4.6.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "regenerator-runtime": "^0.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.1",
