--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "NODE_ENV=development webpack --progress",
-    "build:prod": "NODE_ENV=production webpack --progress",
+    "build": "export NODE_ENV=development && export CONFIG=development && webpack --progress",
+    "build:prod": "export NODE_ENV=production && export CONFIG=production && webpack --progress",
+    "build:shopify": "export NODE_ENV=production && export CONFIG=shopify && webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -51,6 +52,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "axios": "^0.18.0",
     "normalize.css": "^8.0.1",
     "preact": "^8.4.2",
     "preact-compat": "^3.18.4",
