--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/runtime": "^7.3.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "history": "^4.7.2",
     "normalize.css": "^8.0.1",
     "preact": "^8.4.2",
     "preact-compat": "^3.18.4",
