--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^9.4.6",
     "babel-loader": "^8.0.5",
     "breakpoint-sass": "^2.7.1",
+    "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "cssnano": "^4.1.8",
@@ -44,10 +45,12 @@
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "regenerator-runtime": "^0.13.1",
+    "rename-output-webpack-plugin": "^1.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.1",
     "webpack": "^4.29.0",
+    "webpack-clean": "^1.2.3",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   },
