--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "export NODE_ENV=development && export CONFIG=development && webpack --progress",
     "build:prod": "export NODE_ENV=production && export CONFIG=production && webpack --progress",
     "build:shopify": "export NODE_ENV=production && export CONFIG=shopify && webpack --progress",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config ./jest.config.js --coverage"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "autoprefixer": "^9.4.6",
     "babel-loader": "^8.0.5",
     "breakpoint-sass": "^2.7.1",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
@@ -42,8 +43,12 @@
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
+    "jest": "^24.1.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "preact-compat-enzyme": "^0.2.5",
+    "preact-jsx-chai": "^2.2.1",
+    "preact-test-utils": "^0.1.4",
     "regenerator-runtime": "^0.13.1",
     "rename-output-webpack-plugin": "^1.0.1",
     "sass-loader": "^7.1.0",
