--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,9 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off"
+  },
+  "globals": {
+    "API_HOST": true,
+    "API_KEY": true
   }
 }
