--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "export NODE_ENV=development && export CONFIG=development && webpack --progress",
     "build:prod": "export NODE_ENV=production && export CONFIG=production && webpack --progress",
     "build:shopify": "export NODE_ENV=production && export CONFIG=shopify && webpack --progress",
-    "test": "jest --config ./jest.config.js --coverage",
+    "test": "karma start karma.config.js --log-level debug --single-run",
     "docs": "jsdoc -r ./src/js/button.js -c .jsdoc.json -d docs",
     "readme": "jsdoc2md --template ./.jsdoc2md/readme.hbs --files src/js/button.js -c .jsdoc.json > README.md"
   },
@@ -21,21 +21,21 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/Skiminojek/saia-pf-widget#readme",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-transform-async-to-generator": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.4.6",
+    "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
     "breakpoint-sass": "^2.7.1",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
-    "cssnano": "^4.1.8",
-    "eslint": "^5.12.1",
+    "cssnano": "^4.1.10",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -48,24 +48,33 @@
     "jest": "^24.1.0",
     "jsdoc": "^3.5.5",
     "jsdoc-to-markdown": "^4.0.1",
+    "karma": "^4.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
+    "karma-mocha": "^1.3.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^3.0.5",
     "minami": "^1.2.3",
+    "mocha": "^6.0.0",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "preact-compat-enzyme": "^0.2.5",
     "preact-jsx-chai": "^2.2.1",
     "preact-test-utils": "^0.1.4",
+    "puppeteer": "^1.12.2",
     "regenerator-runtime": "^0.13.1",
     "rename-output-webpack-plugin": "^1.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.2.1",
-    "webpack": "^4.29.0",
+    "terser-webpack-plugin": "^1.2.2",
+    "webpack": "^4.29.5",
     "webpack-clean": "^1.2.3",
-    "webpack-cli": "^3.2.1",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "@3dlook/saia-sdk": "^2.1.0",
+    "@3dlook/saia-sdk": "^2.3.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/runtime": "^7.3.1",
     "axios": "^0.18.0",
