--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
+  "parser": "babel-eslint",
   "extends": ["eslint-config-airbnb"],
   "env": {
+    "es6": true,
     "browser": true,
     "node": true,
     "jest": true
