--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@babel/runtime": "^7.3.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "clipboard": "^2.0.4",
     "history": "^4.7.2",
     "normalize.css": "^8.0.1",
     "preact": "^8.4.2",
