--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/sort-comp": "off"
   },
   "globals": {
     "API_HOST": true,
