--- a/package.json
+++ b/package.json
@@ -93,7 +93,10 @@
     "normalize.css": "^8.0.1",
     "preact": "^8.4.2",
     "preact-compat": "^3.18.4",
+    "preact-context": "^1.1.3",
+    "preact-redux": "^2.1.0",
     "preact-router": "^2.6.1",
-    "qrcode": "^1.4.0"
+    "qrcode": "^1.4.0",
+    "redux": "^4.0.4"
   }
 }
